# mipt-meta-programming

./: CMakeLists.txt  README.md
180912/AbstractFactory/: AbstractFactory.cpp
180912/Singleton/: SingletonMayer.cpp  SingletonMy.cpp
20180919/Compound/: Compound.cpp
bonuses/: base.h
bonuses/1_10102018/: README.md  append_front.h  erase.h  length.h  main.cpp  type_list.h
bonuses/2_20181024/: hierarchy.h  hierarchy_scatter.h  hierarchy_scatter_recursive.h  main.cpp
bonuses/3_20181107/: abstract_factory.h  allocator.h  hierarchy_linear.h  main.cpp
seminars/20180912/Singleton/: SingletonMayer.cpp
seminars/20180919/Flyweight/: Flyweight.cpp
tasks/1/: README.md
tasks/1_20180926/: README.md  base.h  mediator.h
tasks/1_26092018/: main.cpp  observer.h  proxy.h
tasks/2_20181128/: fibonacci.h  hierarchy_complex.h  main.cpp
tasks/3/: input.txt  main.cpp
